evitando subir arquivos desnecessario
Signed-off-by: fsan <fabio.sancinetti@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-.ipynb*
+trabalho_final/atv.aux
+trabalho_final/atv.bbl
+trabalho_final/atv.blg
+trabalho_final/atv.brf
+trabalho_final/atv.log
+trabalho_final/atv.pdf
+trabalho_final/atv.synctex.gz
+trabalho_final/atv.toc
+
